--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "helmet": "^6.1.5",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^5.13.16",
+    "mongoose": "5.5.2",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.1",
     "slugify": "^1.6.5",
