--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
   "scripts": {
     "start": "nodemon server.js",
     "start:prod": "NODE_ENV=production nodemon server.js",
-    "debug": "ndb server.js"
+    "debug": "ndb server.js",
+    "watch:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js",
+    "build:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js"
   },
   "author": "Wiedy Tira Pratama",
   "license": "ISC",
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
+    "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-mongo-sanitize": "^2.2.0",
@@ -25,6 +30,7 @@
     "mongoose": "5.5.2",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.1",
+    "pug": "^3.0.2",
     "slugify": "^1.6.5",
     "validator": "^13.9.0",
     "xss-clean": "^0.1.1"
@@ -40,6 +46,7 @@
     "eslint-plugin-react": "^7.32.2",
     "ndb": "^0.2.4",
     "nodemon": "^2.0.21",
+    "parcel-bundler": "^1.12.5",
     "prettier": "^2.8.4"
   }
 }
