--- a/package.json
+++ b/package.json
@@ -26,11 +26,14 @@
     "express-rate-limit": "^6.7.0",
     "helmet": "^6.1.5",
     "hpp": "^0.2.3",
+    "html-to-text": "^9.0.5",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "5.5.2",
+    "mongoose": "^5.13.17",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1",
     "pug": "^3.0.2",
+    "sharp": "^0.32.1",
     "slugify": "^1.6.5",
     "validator": "^13.9.0",
     "xss-clean": "^0.1.1"
@@ -46,7 +49,7 @@
     "eslint-plugin-react": "^7.32.2",
     "ndb": "^0.2.4",
     "nodemon": "^2.0.21",
-    "parcel-bundler": "^1.12.5",
+    "parcel-bundler": "^1.8.1",
     "prettier": "^2.8.4"
   }
 }
