--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "slugify": "^1.6.5",
     "stripe": "^12.8.0",
     "validator": "^13.9.0",
+    "vercel": "^30.2.1",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
