--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,5 @@
   "version": 2,
   "name": "native-server",
   "builds": [{ "src": "server.js", "use": "@vercel/node" }],
-  "routes": [{ "src": "/(.*)", "dest": "/app.js" }]
+  "routes": [{ "src": "/(.*)", "dest": "/server.js" }]
 }
