--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "natours",
   "version": "1.0.0",
   "engines": {
-    "node": "14.x",
-    "npm": "6.x"
+    "node": "18.0.0",
+    "npm": "6.0.0"
   },
   "description": "Learning node, express and mongoDB",
   "main": "app.js",
