--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-csp": "^0.1.3",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^6.7.0",
+    "express-sslify": "^1.2.0",
     "helmet": "^6.1.5",
     "hpp": "^0.2.3",
     "html-to-text": "^9.0.5",
